tests/gen-test/test_out/recursion-parse-out.txt
error: expected '\n' | ';' but got '('
 --> recursion\root.ctl:1:34
  |
1 | fn infinity(a : uint) => infinity(a) ;
  |                                  ^ token located here
  |
  = info: list

